# portal-test-app

./: build.sh  main.c  meson.build  org.flatpak.PortalTestAppA.json  org.flatpak.PortalTestAppB.json
